<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    	<com.example.helloworld.SlidingLayout  
        android:id="@+id/slidingLayout_participated"  
        android:layout_width="fill_parent"  
        android:layout_height="fill_parent"  
        android:orientation="horizontal" > 
	    	<LinearLayout  
	            android:id="@+id/menu1"  
	            android:layout_width="fill_parent"  
	            android:layout_height="fill_parent"  
	            android:background="@drawable/leaves" 
	            android:orientation="vertical" >              

	        	<Button
	        	    android:id="@+id/menuButton0_partyParticipated"
	        	    android:layout_width="wrap_content"
	        	    android:layout_height="wrap_content"
	        	    android:text="@string/UserInfo" />

	        	<Button
	        	    android:id="@+id/menuButton1_partyParticipated"
	        	    android:layout_width="wrap_content"
	        	    android:layout_height="wrap_content"
	        	    android:text="@string/PartyList" />

	        	<Button
	        	    android:id="@+id/menuButton2_partyParticipated"
	        	    android:layout_width="wrap_content"
	        	    android:layout_height="wrap_content"
	        	    android:text="@string/FriendsList" />

	        	<Button
	        	    android:id="@+id/menuButton3_partyParticipated"
	        	    android:layout_width="wrap_content"
	        	    android:layout_height="wrap_content"
	        	    android:text="@string/Message" />

	        	<Button
	        	    android:id="@+id/menuButton4_partyParticipated"
	        	    android:layout_width="wrap_content"
	        	    android:layout_height="wrap_content"
	        	    android:text="@string/PartyStarted" />

	        	<Button
	        	    android:id="@+id/menuButton5_partyParticipated"
	        	    android:layout_width="wrap_content"
	        	    android:layout_height="wrap_content"
	        	    android:text="@string/PartyPaticipated" />

	        	<Button
	        	    android:id="@+id/menuButton6_partyParticipated"
	        	    android:layout_width="wrap_content"
	        	    android:layout_height="wrap_content"
	        	    android:text="@string/PartyToPaticipate" />

	        	<Button
	        	    android:id="@+id/menuButton7_partyParticipated"
	        	    android:layout_width="wrap_content"
	        	    android:layout_height="wrap_content"
	        	    android:text="@string/Options" />

	        	<Button
	        	    android:id="@+id/menuButton8_partyParticipated"
	        	    android:layout_width="wrap_content"
	        	    android:layout_height="wrap_content"
	        	    android:text="@string/LogOut" />
        	
	    	</LinearLayout>
		    <RelativeLayout 
			    android:id="@+id/content1"  
			    android:layout_width="fill_parent"  
			    android:layout_height="fill_parent"  >
				<RelativeLayout 
					android:id="@+id/title5"
					android:layout_width="fill_parent"
					android:layout_height="38dp"
					android:background="@color/lightskyblue">
					<Button 
					    android:id="@+id/button_menu_partyParticipated"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"	
					    android:layout_centerVertical="true"
				    	android:layout_alignParentLeft="true"
					    android:text="@string/button_menu"   />
					<TextView 
						android:id="@+id/event_joined"
						android:layout_width="wrap_content"
					 	android:layout_height="wrap_content"
						android:layout_centerVertical="true"
						android:layout_centerHorizontal="true"
						android:text="@string/PartyPaticipated"   />
				</RelativeLayout>
				<LinearLayout
				    android:layout_alignParentLeft="true"
				    android:layout_below="@+id/title5"
					android:layout_width="fill_parent"
					android:layout_height="fill_parent"
					android:orientation="vertical" >
					<ListView 
						android:id="@android:id/list"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:drawSelectorOnTop="false"
						android:scrollbars="vertical" />	            
				</LinearLayout>	
			</RelativeLayout>
		</com.example.helloworld.SlidingLayout>  
</LinearLayout>