<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/event"
    tools:context=".Event0" >

    <!--android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"-->

  	<RelativeLayout
  	    android:id="@+id/title1"
  	    android:layout_width="fill_parent"
  	    android:layout_height="40dp" >

		    <Button
		        android:id="@+id/event_button1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentTop="true"
		        android:background="@drawable/image001"
		        android:fitsSystemWindows="false"
		        android:text="@string/join" />

		    <Button
		        android:id="@+id/button_back_event"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:layout_alignParentTop="true"
		        android:background="@drawable/image001"
		        android:text="@string/button_back" />

	</RelativeLayout>

    <TextView
        android:id="@+id/event_textview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/title1"
        android:layout_marginTop="6dp"
        android:text="@string/basketball" />

    <TextView
        android:id="@+id/event_textview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/event_textview1"
        android:layout_below="@+id/event_textview1"
        android:layout_marginTop="6dp"
        android:text="@string/time" />

    <TextView
        android:id="@+id/event_textview3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/event_textview2"
        android:layout_below="@+id/event_textview2"
        android:layout_marginTop="6dp"
        android:text="@string/place" />

    <TextView
        android:id="@+id/event_textview4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/event_textview3"
        android:layout_below="@+id/event_textview3"
        android:layout_marginTop="6dp"
        android:text="@string/num_of_people" />

    <TextView
        android:id="@+id/event_textview5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/event_textview4"
        android:layout_below="@+id/event_textview4"
        android:layout_marginTop="6dp"
        android:text="@string/keyword" />

    <TextView
        android:id="@+id/event_textview6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/event_textview5"
        android:layout_alignRight="@+id/event_textview5"
        android:layout_below="@+id/event_textview5"
        android:layout_marginTop="6dp"
        android:text="@string/tip" />

    <Button
        android:id="@+id/event_button2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <Button
        android:id="@+id/event_button3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/event_textview6"
        android:layout_marginTop="66dp"
        android:background="#00000000"
        android:gravity="center"
        android:text="@string/scan_qrcode"
        android:textColor="@color/black"
        android:textSize="25sp" />

</RelativeLayout>