<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

 <RelativeLayout
     android:id="@+id/title6"
     android:layout_width="fill_parent"
     android:layout_height="38dp"
     android:background="@color/gainsboro" >

	    <Button
	        android:id="@+id/button_back_event_score"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_centerVertical="true"
	        android:background="@drawable/image001"
	        android:text="@string/button_back" />

	<TextView 
	    android:id="@+id/event_score"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerVertical="true"
	    android:layout_centerHorizontal="true"
	    android:text="@string/Student_PartyPaticipated"/>

	<Button
	    android:id="@+id/submit"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:layout_centerVertical="true"
	    android:background="@drawable/image001"
	    android:text="@string/submit"
	    android:textColorHint="@color/silver" />

	</RelativeLayout>
<LinearLayout
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical" >

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg1"
        android:drawSelectorOnTop="false"
        android:scrollbars="vertical" >

    </ListView>
	            
</LinearLayout>	
</LinearLayout>